--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.14.0",
-    "express-mysql-session": "^1.2.0"
+    "express-mysql-session": "^1.2.0",
+    "express-session": "^1.14.2",
+    "musicmetadata": "^2.0.5",
+    "mysql": "^2.12.0",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {},
   "scripts": {
