--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.14.0",
     "express-mysql-session": "^1.2.0",
     "express-session": "^1.14.2",
+    "material-design-lite": "^1.3.0",
     "musicmetadata": "^2.0.5",
     "mysql": "^2.12.0",
     "pug": "^2.0.0-beta6"
