--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.14.0",
     "express-mysql-session": "^1.2.0",
     "express-session": "^1.14.2",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0",
     "material-design-lite": "^1.3.0",
     "musicmetadata": "^2.0.5",
     "mysql": "^2.12.0",
